gcc/testsuite/rust/rustc/ui/typeck/nonexistent-field-not-ambiguous.rs
struct Foo {
    val: MissingType,
// { dg-error ".E0412." "" { target *-*-* } .-1 }
}

fn main() {
    Foo { val: Default::default() };
}

